# cgal_play

convex_hull_2/: CMakeLists.txt  vector_convex_hull_2.cpp
convex_hull_2_intersection/: exact_exact_ch_intersection.cpp
dynamic_hull/: CMakeLists.txt  dynamic_hull_3.cpp
polytope_distance_d_fast_exact/: CMakeLists.txt  polytope_distance_d_fast_exact.cpp
quickhull_any_dim/: CMakeLists.txt  quickhull_any_dim_3.cpp
